Structure changed to use Webpack 4.

--- a/css/lorem.css
+++ b/css/lorem.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 *, *:before, *:after {box-sizing: border-box;}
+:root {
+  --maincolor: #000;
+  --mainbgcolor: #FFFFFF;
+  --accentcolor1: #FDD835;
+  --accentcolor2: #1577D0;
+  --accentcolor3: #F44336;
+}
+
 html {font-size:16px;}
 .wrapper {
   display:grid;
@@ -8,7 +16,7 @@ html {font-size:16px;}
   max-width:1200px;
   width:100%;
   margin:0 auto 10px auto;
-  border:1px solid #FDD835;
+  border:1px solid var(--accentcolor1);
   border-radius:0 0 24px 24px;
   border-top:0 none;
 }
@@ -17,7 +25,7 @@ html {font-size:16px;}
   text-align:center;
   max-width:100%;
   border:0 none;
-  border-bottom:2px solid #FDD835;
+  border-bottom:2px solid var(--accentcolor1);
   padding-bottom:8px;
   margin-bottom:8px;
 }
@@ -25,7 +33,7 @@ html {font-size:16px;}
   html {font-size:18px;}
 	.wrapper {grid-template-columns: 2fr 10fr;}
   .header {text-align:left;}
-  #navdiv {border:0 none;border-right:2px solid #FDD835;padding-right:8px;padding-left:8px;margin-bottom:1px;}
+  #navdiv {border:0 none;border-right:2px solid var(--accentcolor1);padding-right:8px;padding-left:8px;margin-bottom:1px;}
 }
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
@@ -38,33 +46,33 @@ html {font-size:16px;}
 
 /*Just Cosmetics*/
 html {font-family:Arial,sans-serif;}
-body {background:#1E88E5;padding:0 0 10px 0;margin:0;}
+body {background:var(--accentcolor2);padding:0 0 10px 0;margin:0;}
 
-.wrapper {background:#fff;}
+.wrapper {background:var(--mainbgcolor);}
 
 .navbutton {
   -webkit-appearance:none;
   font-size:1rem;
-  border:2px solid #1E88E5;
-  background:#1E88E5;
+  border:2px solid var(--accentcolor2);
+  background:var(--accentcolor2);
   text-align:center;
   margin:2px;
   padding:6px;
-  color:#fff;
+  color:var(--mainbgcolor);
   cursor:pointer;
   white-space:nowrap;
   min-width:8em;
   border-radius:8px;
 }
-.navbutton:hover {color:#000;background:#FDD835;}
+.navbutton:hover {color:#000;background:var(--accentcolor1);}
 
-.header {border-bottom:2px solid #FDD835;margin-bottom:10px;padding:10px;}
+.header {border-bottom:2px solid var(--accentcolor1);margin-bottom:10px;padding:10px;}
 .content {padding:0 10px;max-width:96%;}
-h1 {margin:0 0 10px 0;padding:0;color:#1E88E5;}
-.footer {text-align:center;margin:10px 0 0 0;padding:10px 0 10px 0;color:#000;background:#FDD835;border:1px solid #FDD835;border-radius:0 0 24px 24px;}
-.header:first-line {font-size:2rem;color:#1E88E5;}
+h1 {margin:0 0 10px 0;padding:0;color:var(--accentcolor2);}
+.footer {text-align:center;margin:10px 0 0 0;padding:10px 0 10px 0;color:#000;background:var(--accentcolor1);border:1px solid var(--accentcolor1);border-radius:0 0 24px 24px;}
+.header:first-line {font-size:2rem;color:var(--accentcolor2);}
 #blurb:first-letter {
-  color:#F44336;
+  color:var(--accentcolor3);
   float:left;
   font-family:Georgia,serif;
   font-size:3.8rem;
