--- a/css/lorem.css
+++ b/css/lorem.css
@@ -82,3 +82,5 @@ h1 {margin:0 0 10px 0;padding:0;color:var(--accentcolor2);}
 #wordcount {width:80px;height:30px;font-size:1rem;margin:5px;}
 #hiddenblurb {opacity:0;}
 label {white-space:nowrap;}
+a:link, a:visited {color:var(--accentcolor2);text-decoration:none;}
+a:hover {text-decoration:underline;}
