Updated to include option for Sonnets

--- a/css/lorem.css
+++ b/css/lorem.css
@@ -66,6 +66,8 @@ body {background:var(--accentcolor2);padding:0 0 10px 0;margin:0;}
 }
 .navbutton:hover {color:#000;background:var(--accentcolor1);}
 
+#sonnetbtn {display:none;margin:5px 0 5px 0;}
+
 .header {border-bottom:2px solid var(--accentcolor1);margin-bottom:10px;padding:10px;}
 .content {padding:0 10px;max-width:96%;}
 h1 {margin:0 0 10px 0;padding:0;color:var(--accentcolor2);}
@@ -80,7 +82,7 @@ h1 {margin:0 0 10px 0;padding:0;color:var(--accentcolor2);}
   padding:1px 6px 0 0;
 }
 #wordcount {width:80px;height:30px;font-size:1rem;margin:5px;}
-#hiddenblurb {opacity:0;}
+#hiddenblurb {display:block;opacity:0;}
 label {white-space:nowrap;}
 a:link, a:visited {color:var(--accentcolor2);text-decoration:none;}
 a:hover {text-decoration:underline;}
