Update to improve CSS code readability.

--- a/css/lorem.css
+++ b/css/lorem.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* BASE */
 *, *:before, *:after {box-sizing: border-box;}
 :root {
   --maincolor: #000;
@@ -8,81 +9,134 @@
   --accentcolor3: #F44336;
 }
 
-html {font-size:16px;}
+html {
+    font-size:16px;
+    font-family:Arial,sans-serif;
+}
+body {
+    background:var(--accentcolor2);
+    padding:0 0 10px 0;
+    margin:0;
+}
+label {white-space:nowrap;}
+a:link, a:visited {
+    color:var(--accentcolor2);
+    text-decoration:none;
+}
+a:hover {text-decoration:underline;}
+h1 {
+    margin:0 0 10px 0;
+    padding:0;
+    color:var(--accentcolor2);
+}
+button {-webkit-appearance:none;}
+
+/* LAYOUT */
 .wrapper {
-  display:grid;
-  grid-gap: 0;
-  grid-template-columns: 1fr;
-  max-width:1200px;
-  width:100%;
-  margin:0 auto 10px auto;
-  border:1px solid var(--accentcolor1);
-  border-radius:0 0 24px 24px;
-  border-top:0 none;
+    display:grid;
+    grid-gap: 0;
+    grid-template-columns: 1fr;
+    max-width:1200px;
+    width:100%;
+    margin:0 auto 10px auto;
+    border:1px solid var(--accentcolor1);
+    border-radius:0 0 24px 24px;
+    border-top:0 none;
+    background:var(--mainbgcolor);
 }
-.header, .footer {grid-column: 1 / -1;text-align:center;}
-#navdiv {
-  text-align:center;
-  max-width:100%;
-  border:0 none;
-  border-bottom:2px solid var(--accentcolor1);
-  padding-bottom:8px;
-  margin-bottom:8px;
+.header, .footer {grid-column: 1 / -1;}
+
+/* MODULE */
+.header, .footer {text-align:center;}
+.header {
+    border-bottom:2px solid var(--accentcolor1);
+    margin-bottom:10px;
+    padding:10px;
 }
+.header:first-line {
+    font-size:2rem;
+    color:var(--accentcolor2);
+}
+.content {
+    padding:0 10px;
+    max-width:96%;
+}
+.content__generated-text::first-letter {
+    color:var(--accentcolor3);
+    float:left;
+    font-family:Georgia,serif;
+    font-size:3.8rem;
+    line-height:3rem;
+    padding:1px 6px 0 0;
+}
+.footer {
+    margin:10px 0 0 0;
+    padding:10px 0 10px 0;
+    color:#000;
+    background:var(--accentcolor1);
+    border:1px solid var(--accentcolor1);
+    border-radius:0 0 24px 24px;
+}
+.navigation {
+    text-align:center;
+    max-width:100%;
+    border:0 none;
+    border-bottom:2px solid var(--accentcolor1);
+    padding-bottom:8px;
+    margin-bottom:8px;
+}
+.navigation__button {
+    display:inline-block;
+    font-size:1rem;
+    border:2px solid var(--accentcolor2);
+    background:var(--accentcolor2);
+    text-align:center;
+    margin:2px;
+    padding:6px;
+    color:var(--mainbgcolor);
+    cursor:pointer;
+    white-space:nowrap;
+    min-width:8em;
+    border-radius:8px;
+    height:2.5rem;
+    line-height:1.25rem;
+}
+.navigation__button:hover {color:#000;background:var(--accentcolor1);}
+
+#sonnetbtn {
+    display:none;
+    margin:5px 0 5px 0;
+}
+
+#wordcount {
+    width:80px;
+    height:30px;
+    font-size:1rem;
+    margin:5px;
+}
+#hiddenblurb {
+    display:block;
+    opacity:0;
+}
+
+/* STATE */
 @media screen and (min-width: 768px) {
-  html {font-size:18px;}
-	.wrapper {grid-template-columns: 2fr 10fr;}
-  .header {text-align:left;}
-  #navdiv {border:0 none;border-right:2px solid var(--accentcolor1);padding-right:8px;padding-left:8px;margin-bottom:1px;}
+    html {font-size:18px;}
+    .wrapper {grid-template-columns: 2fr 10fr;}
+    .header {text-align:left;}
+    .navigation {
+        border:0 none;
+        border-right:2px solid var(--accentcolor1);
+        padding-right:8px;
+        padding-left:8px;
+        margin-bottom:1px;
+    }
 }
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
-	.wrapper {grid-template-columns: 1fr;}
+    .wrapper {grid-template-columns: 1fr;}
 }
 /* #### Mobile Phones Landscape #### */
 @media screen and (max-device-width: 640px) and (orientation: landscape){
-	.wrapper {grid-template-columns: 1fr;}
+    .wrapper {grid-template-columns: 1fr;}
 }
-
-/*Just Cosmetics*/
-html {font-family:Arial,sans-serif;}
-body {background:var(--accentcolor2);padding:0 0 10px 0;margin:0;}
-
-.wrapper {background:var(--mainbgcolor);}
-
-.navbutton {
-  -webkit-appearance:none;
-  font-size:1rem;
-  border:2px solid var(--accentcolor2);
-  background:var(--accentcolor2);
-  text-align:center;
-  margin:2px;
-  padding:6px;
-  color:var(--mainbgcolor);
-  cursor:pointer;
-  white-space:nowrap;
-  min-width:8em;
-  border-radius:8px;
-}
-.navbutton:hover {color:#000;background:var(--accentcolor1);}
-
-#sonnetbtn {display:none;margin:5px 0 5px 0;}
-
-.header {border-bottom:2px solid var(--accentcolor1);margin-bottom:10px;padding:10px;}
-.content {padding:0 10px;max-width:96%;}
-h1 {margin:0 0 10px 0;padding:0;color:var(--accentcolor2);}
-.footer {text-align:center;margin:10px 0 0 0;padding:10px 0 10px 0;color:#000;background:var(--accentcolor1);border:1px solid var(--accentcolor1);border-radius:0 0 24px 24px;}
-.header:first-line {font-size:2rem;color:var(--accentcolor2);}
-#blurb:first-letter {
-  color:var(--accentcolor3);
-  float:left;
-  font-family:Georgia,serif;
-  font-size:3.8rem;
-  line-height:3rem;
-  padding:1px 6px 0 0;
-}
-#wordcount {width:80px;height:30px;font-size:1rem;margin:5px;}
-#hiddenblurb {display:block;opacity:0;}
-label {white-space:nowrap;}
-a:link, a:visited {color:var(--accentcolor2);text-decoration:none;}
-a:hover {text-decoration:underline;}
