--- a/css/lorem.css
+++ b/css/lorem.css
@@ -33,6 +33,7 @@ button {-webkit-appearance:none;}
 
 /* LAYOUT */
 .wrapper {
+    position:relative;
     display:grid;
     grid-gap: 0;
     grid-template-columns: 1fr;
@@ -102,6 +103,27 @@ button {-webkit-appearance:none;}
     line-height:1.25rem;
 }
 .navigation__button:hover {color:#000;background:var(--accentcolor1);}
+
+.navigation__button--OK {
+    font-size:1.5rem;
+    min-width:4rem;
+    height:3rem;
+}
+
+.copyalert {
+    position:absolute;
+    left:0;
+    top:0;
+    background:rgba(0,0,0,0.9);
+    font-size:1.8rem;
+    color:white;
+    text-align:center;
+    padding:5rem 0.5rem 0 0.5rem;
+    width:100%;
+    height:100%;
+    border-radius:0 0 24px 24px;
+    display:none;
+}
 
 #sonnetbtn {
     display:none;
