--- a/css/lorem.css
+++ b/css/lorem.css
@@ -62,6 +62,9 @@ button {-webkit-appearance:none;}
     padding:0 10px;
     max-width:96%;
 }
+.content__generated-text {
+    line-height:1.2;
+}
 .content__generated-text::first-letter {
     color:var(--accentcolor3);
     float:left;
@@ -131,8 +134,8 @@ button {-webkit-appearance:none;}
 }
 
 #wordcount {
-    width:80px;
-    height:30px;
+    width:4.4rem;
+    height:1.7rem;
     font-size:1rem;
     margin:5px;
 }
